Correction alignement boutons calculatrice

--- a/style.css
+++ b/style.css
@@ -326,3 +326,11 @@ h2 {
     font-weight: bold;
     letter-spacing: 1px;
 }
+
+.spacer {
+    visibility: hidden;
+}
+
+.zero {
+    grid-column: span 2;
+}
